--- a/article-page.html
+++ b/article-page.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/style.min.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Space Blog | Blog Post</title>
 </head>
 <body>
@@ -38,7 +38,7 @@
           <main class="article-post-main">
             <section class="margin">
               <section id="post-title">
-                <p><small>Catagory</small></p>
+                <p><small>Category</small></p>
                 <h1>Mars is looking to over take the Moon by Sunday.</h1>
                 <p>Joe Doe | 00-00-0000</p>
               </section>
@@ -57,10 +57,10 @@
                     <div id="prev-btn">
                       <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-left-fill" viewBox="0 0 16 16">
                         <path d="M3.86 8.753l5.482 4.796c.646.566 1.658.106 1.658-.753V3.204a1 1 0 0 0-1.659-.753l-5.48 4.796a1 1 0 0 0 0 1.506z"/>
-                      </svg>Prev</a>
+                      </svg><span>Prev</span></a>
                     </div>
                     <div id="next-btn">
-                      <a href="#">Next<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
+                      <a href="#"><span>Next</span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-caret-right-fill" viewBox="0 0 16 16">
                         <path d="M12.14 8.753l-5.482 4.796c-.646.566-1.658.106-1.658-.753V3.204a1 1 0 0 1 1.659-.753l5.48 4.796a1 1 0 0 1 0 1.506z"/>
                       </svg></a>
                     </div>
@@ -79,7 +79,7 @@
                             <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post Name">
                           </div>
                           <div class="article-text">
-                            <p>Catagory | 00-00-0000</p>
+                            <p>Category | 00-00-0000</p>
                             <h3>This is where the title will go</h3>
                           </div>
                         </a>
@@ -92,7 +92,7 @@
                             <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post Name">
                           </div>
                           <div class="article-text">
-                            <p>Catagory | 00-00-0000</p>
+                            <p>Category | 00-00-0000</p>
                             <h3>This is where the title will go</h3>
                           </div>
                         </a>
@@ -105,7 +105,7 @@
                             <img class="img-fluid" src="images/galaxy-11098_640.jpg" alt="Post Name">
                           </div>
                           <div class="article-text">
-                            <p>Catagory | 00-00-0000</p>
+                            <p>Category | 00-00-0000</p>
                             <h3>This is where the title will go</h3>
                           </div>
                         </a>
